test/tests/stages/18_structures/invalid_types/extra_credit/union_struct_conflicts/struct_shadowed_by_union.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(tag)
  {
  int
  identifier(a)
  ;
  }
  ;
  {
  union
  identifier(tag)
  {
  long
  identifier(l)
  ;
  }
  ;
  struct
  identifier(tag)
  *
  identifier(x)
  ;
  }
  return
  const int(0)
  ;
  }
